# chimera

./: .dockerignore  .gitignore  ADAPTER_API.md  BENCHMARK_CONFIG_README.md  BRAND_SEPARATION_SUMMARY.md  CHIMERA_README.md  CHIMERA_STYLEGUIDE.md  CODE_REVIEW_REPORT.md  DOCKER_RUNTIME_TEST_REPORT.md  ELEVATION_SUMMARY.md  LICENSE  MULTI_VENDOR_DEMO.md  NEUTRALITY_GUARANTEES.md  NEUTRALITY_STYLEGUIDE.md  README.md  USER_GUIDE.md  __init__.py  benchmark_config_example.toml  benchmark_config_schema.yaml  benchmark_example.yaml  benchmark_harness.py  benchmark_standards.py  capability_matrix.py  chimera_cli.py  chimera_example.cpp  chimera_regression_detector.py  chimera_server.py  citations.py  colors.py  conftest.py  dashboard.py  demo.py  demo_multi_vendor.py  docker-compose.release.yml  docker-compose.yml  endurance_config.toml  exporter.py  neutrality_linter.py  neutrality_linter_config.yaml  pytest.ini  (+10 more)
adapters/chimera/: CMakeLists.txt  LICENSE.md  QUICK_REFERENCE.md  README.md  adapter_config_example.toml  elasticsearch_adapter.hpp  example_usage.cpp  mongodb_adapter.hpp  neo4j_adapter.hpp  pinecone_adapter.hpp  postgresql_adapter.hpp  qdrant_adapter.hpp  template_adapter.hpp  weaviate_adapter.hpp
baselines/chimera/: standard_golden_baselines.seed.json
demo_reports/: benchmark_comparison.csv  benchmark_report_alphabetical.html  vector_search_comparison.csv  vector_search_report.html
docs/benchmarks/: CHIMERA_HARDWARE_SPECIFICATION_GUIDE.md  CHIMERA_IMPLEMENTATION_SUMMARY.md  CHIMERA_SCIENTIFIC_FOUNDATION.md  CHIMERA_STATISTICAL_METHODOLOGY_GUIDE.md  CHIMERA_USER_GUIDE_NEUTRAL_INTEGRATION.md  CHIMERA_WORKLOAD_REFERENCE.md
docs/chimera/: ADAPTER_GUIDE.md  API_REFERENCE.md  ARCHITECTURE_INTERFACE.md  IMPLEMENTATION_SUMMARY.md  SECURITY_SUMMARY.md
docs/ci-cd/workflows/: chimera-retry-policy-ci.md
docs/ci-cd/workflows/02-feature-modules/chimera/: chimera-benchmark-ci.md  chimera-error-recovery-retry-ci.md  chimera-integration-ci.md
docs/de/connectors/: chimera.md
docs/troubleshooting/: chimera_troubleshooting.md
include/chimera/: ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  FUTURE_ENHANCEMENTS.md  README.md  ROADMAP.md  SECURITY.md  connection_pool.hpp  database_adapter.hpp  elasticsearch_adapter.hpp  mongodb_adapter.hpp  neo4j_adapter.hpp  pinecone_adapter.hpp  postgresql_adapter.hpp  qdrant_adapter.hpp  retry_policy.hpp  weaviate_adapter.hpp
release/dockerhub-package/: DOCKER_IMAGE_SCOPE.md  Dockerfile  README_RELEASE_PACKAGE.md  RELEASE_NOTES.md  SHA256SUMS.txt  requirements.txt
scripts/: release_dockerhub.ps1
src/chimera/: ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  FUTURE_ENHANCEMENTS.md  README.md  ROADMAP.md  SECURITY.md  adapter_factory.cpp  elasticsearch_adapter.cpp  mongodb_adapter.cpp  neo4j_adapter.cpp  pinecone_adapter.cpp  postgresql_adapter.cpp  qdrant_adapter.cpp  weaviate_adapter.cpp
test_protocols/: THEMISDB_TEST_PROTOCOL_2026-04-17.md
tests/baselines/chimera/: baseline.json
tests/benchmarks/: test_chimera_regression_detector.py
tests/chimera/: adapter_test_utils.hpp  test_adapter_config_validation.cpp  test_adapter_factory.cpp  test_capability_matrix.cpp  test_chimera_async_api.cpp  test_chimera_batch_operations.cpp  test_elasticsearch_adapter.cpp  test_mongodb_adapter.cpp  test_neo4j_adapter.cpp  test_pinecone_adapter.cpp  test_postgresql_adapter.cpp  test_qdrant_adapter.cpp  test_retry_policy.cpp  test_weaviate_adapter.cpp
